Bug 1578311: Don't prune a trailing HTML br child from the accessibility tree. r=eeejay

Pruning these meant that `<span><br></span>` wasn't represented in the tree or rendered text at all.
This meant that lines were merged together in NVDA browse mode; e.g. in CI build logs on Gitlab.

The reason we started pruning these is that they were causing invalid line offsets to be returned for affected lines (bug 899433).
This patch also fixes this problem in HyperTextAccessible::FindOffset.

Differential Revision: https://phabricator.services.mozilla.com/D44815